[gd_scene load_steps=26 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://ModelActionsMaster.gd" type="Script" id=2]
[ext_resource path="res://ModelOpenFileDialog.gd" type="Script" id=3]
[ext_resource path="res://ModelList.gd" type="Script" id=4]
[ext_resource path="res://Me.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tablet.tscn" type="PackedScene" id=6]
[ext_resource path="res://Room.tscn" type="PackedScene" id=7]
[ext_resource path="res://textures/sandystoneroad01_basecolor.png" type="Texture" id=8]
[ext_resource path="res://Table.tscn" type="PackedScene" id=9]
[ext_resource path="res://Door.tscn" type="PackedScene" id=10]
[ext_resource path="res://textures/photos_2015_09_18_fst_698oway7o7h.jpg" type="Texture" id=11]
[ext_resource path="res://Printer3D.tscn" type="PackedScene" id=12]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.247059, 0.372549, 0.498039, 1 )
ambient_light_color = Color( 0.768627, 0.662745, 0.25098, 1 )
fog_enabled = true
fog_color = Color( 0.631373, 0.780392, 0.776471, 1 )
fog_sun_amount = 0.25

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.317647, 0.25098, 0.192157, 1 )
metallic = 0.75

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("TabletViewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
albedo_texture = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 8 )
uv1_scale = Vector3( 20, 20, 20 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.74902, 0.878431, 1, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.752941, 0.501961, 1, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.101961, 0.396078, 0.509804, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.498039, 0.490196, 0.494118, 1 )
metallic = 0.7

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 11 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.72549, 0.615686, 0.321569, 1 )
metallic = 0.85

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.109804, 0.188235, 0.278431, 1 )
metallic = 0.25

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.764706, 0.772549, 0.768627, 1 )
metallic = 0.75
metallic_specular = 0.75

[node name="Main" type="Node"]

[node name="TabletViewport" type="Viewport" parent="."]
size = Vector2( 400, 600 )
transparent_bg = true
render_target_v_flip = true

[node name="GUI" type="TabContainer" parent="TabletViewport"]
margin_left = 7.0
margin_top = 7.0
margin_right = 415.0
margin_bottom = 643.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Printers" type="ColorRect" parent="TabletViewport/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 400, 600 )
color = Color( 0.152941, 0.607843, 0.607843, 1 )

[node name="Models" type="ColorRect" parent="TabletViewport/GUI"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 400, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.282353, 0.764706, 0.45098, 1 )

[node name="ModelActionsMaster" type="Control" parent="TabletViewport/GUI/Models"]
margin_left = 20.0
margin_top = 20.0
margin_right = 181.0
margin_bottom = 141.0
script = ExtResource( 2 )

[node name="ModelActionsLabel" type="Label" parent="TabletViewport/GUI/Models/ModelActionsMaster"]
margin_left = 4.0
margin_right = 71.0
margin_bottom = 14.0
text = "Model Actions"

[node name="HBoxContainer" type="HBoxContainer" parent="TabletViewport/GUI/Models/ModelActionsMaster"]
margin_top = 18.0
margin_right = 172.0
margin_bottom = 110.0

[node name="VBoxContainer1" type="VBoxContainer" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer"]
margin_right = 47.0
margin_bottom = 92.0

[node name="OpenButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1"]
margin_right = 47.0
margin_bottom = 20.0
text = "Open"

[node name="ModelOpenFileDialog2" type="FileDialog" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1/OpenButton"]
margin_left = 34.1667
margin_top = -214.939
margin_right = 309.167
margin_bottom = -84.9386
window_title = "Open a File or Directory"
mode = 3
access = 2
current_dir = "/home/shane/Godot/Test9"
current_path = "/home/shane/Godot/Test9/"
script = ExtResource( 3 )

[node name="CloseButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1"]
margin_top = 24.0
margin_right = 47.0
margin_bottom = 44.0
text = "Close"

[node name="ShowButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1"]
margin_top = 48.0
margin_right = 47.0
margin_bottom = 68.0
text = "Show"

[node name="HideButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1"]
margin_top = 72.0
margin_right = 47.0
margin_bottom = 92.0
text = "Hide"

[node name="VBoxContainer2" type="VBoxContainer" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer"]
margin_left = 51.0
margin_right = 147.0
margin_bottom = 92.0

[node name="TranslateButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer2"]
margin_right = 96.0
margin_bottom = 20.0
text = "Translate"

[node name="RotateButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 96.0
margin_bottom = 44.0
text = "Rotate"

[node name="ScaleButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 96.0
margin_bottom = 68.0
text = "Scale"

[node name="DropToPlateButton" type="Button" parent="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 96.0
margin_bottom = 92.0
text = "Drop to Plate"

[node name="ModelListMaster" type="Control" parent="TabletViewport/GUI/Models"]
margin_left = 20.0
margin_top = 160.0
margin_right = 205.0
margin_bottom = 312.0

[node name="ModelListLabel" type="Label" parent="TabletViewport/GUI/Models/ModelListMaster"]
margin_left = 4.0
margin_right = 71.0
margin_bottom = 14.0
text = "Model List"

[node name="ModelList" type="ItemList" parent="TabletViewport/GUI/Models/ModelListMaster"]
margin_top = 18.0
margin_right = 172.0
margin_bottom = 143.0
select_mode = 1
script = ExtResource( 4 )

[node name="Processes" type="ColorRect" parent="TabletViewport/GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 400, 600 )
color = Color( 0.796078, 0.537255, 0.537255, 1 )

[node name="Console" type="ColorRect" parent="TabletViewport/GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 400, 600 )
color = Color( 0.717647, 0.415686, 0.811765, 1 )

[node name="View3D" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="View3D"]
environment = SubResource( 1 )

[node name="Lights" type="Spatial" parent="View3D"]

[node name="OmniLight" type="OmniLight" parent="View3D/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="View3D/Lights"]
transform = Transform( 0.220725, 0.0157995, -0.975208, -0.966313, 0.139237, -0.216456, 0.132365, 0.990133, 0.0460002, 4.62517, -2.99075, -0.541389 )

[node name="Me" parent="View3D" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 100, 30 )

[node name="Tablet" parent="View3D/Me" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.5, 0, -16 )
Tablet_Size = Vector3( 15, 22, 0.5 )
Case_Material = SubResource( 2 )
Screen_Material = SubResource( 4 )
Viewport_Name = "TabletViewport"

[node name="FabLab" type="Spatial" parent="View3D"]

[node name="Room" parent="View3D/FabLab" instance=ExtResource( 7 )]
Floor_Material = SubResource( 5 )
Ceiling_Material = SubResource( 6 )
Wall_Material = SubResource( 7 )

[node name="Table" parent="View3D/FabLab" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 75, 0 )
Top_Material = SubResource( 8 )
Leg_Material = SubResource( 9 )

[node name="Door" parent="View3D/FabLab" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 102.5 )
Door_Size = Vector3( 80, 180, 6 )
Knob_Diameter = 7.5
Knob_Location = 1
Panel_Material = SubResource( 10 )
Knob_Material = SubResource( 11 )

[node name="Printer3D" parent="View3D/FabLab" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 85, -3.431 )
Box_Size = Vector3( 20, 10, 20 )
Plate_Material = SubResource( 12 )
Base_Material = SubResource( 13 )
[connection signal="pressed" from="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1/OpenButton" to="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1/OpenButton/ModelOpenFileDialog2" method="_on_OpenButton_pressed"]
[connection signal="files_selected" from="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1/OpenButton/ModelOpenFileDialog2" to="TabletViewport/GUI/Models/ModelListMaster/ModelList" method="_on_ModelOpenFileDialog2_files_selected"]
[connection signal="pressed" from="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1/CloseButton" to="TabletViewport/GUI/Models/ModelListMaster/ModelList" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1/ShowButton" to="TabletViewport/GUI/Models/ModelListMaster/ModelList" method="_on_ShowButton_pressed"]
[connection signal="pressed" from="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer1/HideButton" to="TabletViewport/GUI/Models/ModelListMaster/ModelList" method="_on_HideButton_pressed"]
[connection signal="pressed" from="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer2/ScaleButton" to="TabletViewport/GUI/Models/ModelListMaster/ModelList" method="_on_ScaleButton_pressed"]
[connection signal="pressed" from="TabletViewport/GUI/Models/ModelActionsMaster/HBoxContainer/VBoxContainer2/DropToPlateButton" to="TabletViewport/GUI/Models/ModelListMaster/ModelList" method="_on_DropToPlateButton_pressed"]
[connection signal="multi_selected" from="TabletViewport/GUI/Models/ModelListMaster/ModelList" to="TabletViewport/GUI/Models/ModelActionsMaster" method="_on_ModelList_multi_selected"]
[connection signal="nothing_selected" from="TabletViewport/GUI/Models/ModelListMaster/ModelList" to="TabletViewport/GUI/Models/ModelActionsMaster" method="_on_ModelList_nothing_selected"]
